Add overrides for items with seedName